# blaze

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  logger.h  main.cpp  thread_pool.h
.github/workflows/: ci.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: add.go  build.go  clean.go  dev.go  docker.go  docs.go  doctor.go  generate.go  init.go  root.go  run.go  test.go  ui.go
cli/cmd/templates/: CMakeLists.txt.tmpl  Dockerfile.tmpl  controller.cpp.tmpl  controller.h.tmpl  docker-compose.yml.tmpl  dockerignore.tmpl  env.tmpl  gitignore.tmpl  main.cpp.tmpl  model.h.tmpl
docs/: ADVANCED.md  CLI.md  DATABASE.md  DI.md  INJECTION.md  MANUAL.md  MIDDLEWARE.md  REPOSITORY.md  TESTING.md  WEBSOCKETS.md  architecture.md  cli.md  configuration.md  database-orm.md  dependency-injection.md  file-uploads.md  getting-started.md  http-client.md  middleware.md  routing.md  testing.md  utilities.md  websockets.md
examples/: 01_hello_world.cpp  02_todo_crud.cpp  03_realtime_chat.cpp  04_secure_auth.cpp  05_api_proxy.cpp  06_middleware_chain.cpp  07_advanced_queries.cpp  08_production_ssl.cpp  09_background_tasks.cpp  10_static_site.cpp  11_transactions.cpp  12_file_uploads.cpp  CMakeLists.txt  README.md  demo.cpp
examples/01-hello-world/: CMakeLists.txt  README.md  main.cpp
examples/02-todo-api/: CMakeLists.txt  README.md  main.cpp
examples/03-quote-generator/: CMakeLists.txt  README.md  main.cpp
examples/03-quote-generator/public/: app.js  index.html  style.css
framework/: BlazeServer.cpp  BlazeServer.h  CMakeLists.txt  HttpServer.cpp  PyroServer.cpp  PyroServer.h  app.cpp  app.h  logger.h  middleware.h  request.cpp  request.h  response.cpp  response.h  router.cpp  router.h
framework/include/blaze/: app.h  client.h  crypto.h  database.h  db_common.h  db_result.h  di.h  environment.h  exceptions.h  injector.h  json.h  logger.h  middleware.h  model.h  multipart.h  mysql.h  mysql_connection.h  mysql_pool.h  mysql_result.h  openapi.h  pg_connection.h  pg_pool.h  pg_result.h  postgres.h  redis.h  reflection.h  repository.h  request.h  response.h  router.h  traits.h  websocket.h  wrappers.h
framework/include/blaze/util/: circuit_breaker.h  string.h
framework/src/: app.cpp  client.cpp  crypto.cpp  db_result.cpp  environment.cpp  json.cpp  logger.cpp  middleware.cpp  multipart.cpp  request.cpp  response.cpp  router.cpp  server.cpp  server.h
framework/src/drivers/mysql/: mysql_connection.cpp  mysql_pool.cpp  mysql_result.cpp
framework/src/drivers/postgres/: pg_connection.cpp  pg_pool.cpp  pg_result.cpp
framework/src/drivers/redis/: redis_pool.cpp
framework/src/util/: circuit_breaker.cpp  string.cpp
tests/: CMakeLists.txt  test_app.cpp  test_client_smart.cpp  test_crypto.cpp  test_di.cpp  test_environment.cpp  test_injection.cpp  test_json.cpp  test_main.cpp  test_middleware.cpp  test_model.cpp  test_multipart.cpp  test_request.cpp  test_request_di.cpp  test_response.cpp  test_router.cpp  test_server.cpp  test_snake_case.cpp  test_static_files.cpp  test_timeout.cpp  test_websocket.cpp
tests/fuzzers/: CMakeLists.txt  fuzz_json.cpp  fuzz_url.cpp
tests/integration_app/: .env  CMakeLists.txt  fuzz.py  int_post.lua  login.lua  main.cpp  post.lua  user_post.lua
tests/integration_app/public/: index.html
tools/: benchmark.sh  polish.sh  tsan.supp
